# setup-poetry-env

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  action.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: auto-update.yml  check-dist.yml  test.yml
__tests__/data/: pyproject.toml
__tests__/data/test_python_app/: __init__.py  test.py
src/: cache-save.ts  main.ts  setup-python.ts  util.ts
src/poetry/: config.ts  install.ts  restore.ts  setup.ts
tools/: edit-setup-python.js
